--- a/themes/my_theme/sass/style.scss
+++ b/themes/my_theme/sass/style.scss
@@ -1,26 +1,83 @@
+@import "normalize";
+
 $fancy_font: 'Open Sans Condensed', sans-serif;;
 $font: 'Rajdhani', sans-serif;
-$whitish: #FAFFF6;
-$light_grey: #AFB5A8;
+$whitish: #FDFFF6;
+$light_grey: #C2CEC9;
+$dark_grey: #495055;
+$pink: #FFBDDB;
 
 .container {
+  width: 100%;
+  height: 1000px;
   background-color: $light_grey;
-  /* IE10 Consumer Preview */ 
-  background-image: -ms-linear-gradient(top, $whitish 0%, $light_grey 100%);
-
-  /* Mozilla Firefox */ 
-  background-image: -moz-linear-gradient(top, $whitish 0%, $light_grey 100%);
-
-  /* Opera */ 
-  background-image: -o-linear-gradient(top, $whitish 0%, $light_grey 100%);
-
-  /* Webkit (Safari/Chrome 10) */ 
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, $whitish), color-stop(1, $light_grey));
-
-  /* Webkit (Chrome 11+) */ 
-  background-image: -webkit-linear-gradient(top, $whitish 0%, $light_grey 100%);
-
-  /* W3C Markup, IE10 Release Preview */ 
-  background-image: linear-gradient(to bottom, $whitish 0%, $light_grey 100%);
-
 }
+
+.header {
+  position: absolute;
+  background-color: $dark-grey;
+  width: 100%;
+  height: 70px;
+  opacity: 0.7;
+  color: $whitish;
+  @media only screen and (min-width: 321px) and (max-width: 720px) {
+    height: 120px;
+  }
+}
+
+//h1#kim {
+//  background-image: "image/portrait.png";
+//  width: 100%;
+//  border-radius: 100%;
+//  margin-left: -9999px;
+//}
+
+.name {
+  float: left;
+  text-transform: uppercase;
+  font-family: $fancy_font;
+  font-size: 45px;
+  margin-left: 20px;
+  @media only screen and (max-width: 400px) {
+    margin-top:10px;
+    text-align: center;
+    float: none;
+  }
+}
+
+.nav-bar {
+  float: right;
+  text-transform: lowercase;
+  font-family: $fancy_font;
+  font-size: x-large;
+  margin-right: 20px;
+}
+
+.clearfix {
+  clear: both;
+}
+
+li, a {
+  text-decoration: none;
+  color: $whitish;
+  @media only screen and (max-width: 400px) {
+    text-align: center;
+    float: none;
+  }
+  @media only screen and (max-width: 720px) {
+    padding-bottom: 20px;
+    display: inline-block;
+    padding: 6px;
+    text-align: center;
+  }
+  @media only screen and (min-width: 719px) {
+    font-size: x-large;
+    display: inline-block;
+    padding-right: 15px;
+    padding-top: -20px;
+  }
+}
+
+a:hover {
+  color: $pink;
+} 
