--- a/themes/my_theme/sass/style.scss
+++ b/themes/my_theme/sass/style.scss
@@ -5,12 +5,17 @@ $font: 'Rajdhani', sans-serif;
 $whitish: #FDFFF6;
 $light_grey: #C2CEC9;
 $dark_grey: #495055;
-$pink: #FFBDDB;
+$pink: #FF42B8;
 
 .container {
   width: 100%;
-  height: 1000px;
-  background-color: $light_grey;
+  height: 100%;
+//  background-color: $light_grey;
+}
+
+.content {
+  text-align: center;
+  width: 100%;
 }
 
 .header {
@@ -18,7 +23,6 @@ $pink: #FFBDDB;
   background-color: $dark-grey;
   width: 100%;
   height: 70px;
-  opacity: 0.7;
   color: $whitish;
   @media only screen and (min-width: 321px) and (max-width: 720px) {
     height: 120px;
@@ -38,10 +42,13 @@ $pink: #FFBDDB;
   font-family: $fancy_font;
   font-size: 45px;
   margin-left: 20px;
-  @media only screen and (max-width: 400px) {
+  opacity: 0.7;
+  @media only screen and (min-width: 321px) and (max-width: 720px) {
     margin-top:10px;
     text-align: center;
     float: none;
+    margin: 0 auto;
+    opacity: 0.7;
   }
 }
 
@@ -51,6 +58,7 @@ $pink: #FFBDDB;
   font-family: $fancy_font;
   font-size: x-large;
   margin-right: 20px;
+  opacity: 0.7;
 }
 
 .clearfix {
@@ -60,17 +68,17 @@ $pink: #FFBDDB;
 li, a {
   text-decoration: none;
   color: $whitish;
-  @media only screen and (max-width: 400px) {
+  @media only screen and (min-width: 321px) and (max-width: 720px) {
     text-align: center;
     float: none;
   }
-  @media only screen and (max-width: 720px) {
+  @media only screen and (max-width: 721px) {
     padding-bottom: 20px;
     display: inline-block;
     padding: 6px;
     text-align: center;
   }
-  @media only screen and (min-width: 719px) {
+  @media only screen and (min-width: 720px) {
     font-size: x-large;
     display: inline-block;
     padding-right: 15px;
@@ -81,3 +89,5 @@ li, a {
 a:hover {
   color: $pink;
 } 
+
+
