--- a/themes/my_theme/style.css
+++ b/themes/my_theme/style.css
@@ -358,15 +358,17 @@ th {
 
 .container {
   width: 100%;
-  height: 1000px;
-  background-color: #C2CEC9; }
+  height: 100%; }
+
+.content {
+  text-align: center;
+  width: 100%; }
 
 .header {
   position: absolute;
   background-color: #495055;
   width: 100%;
   height: 70px;
-  opacity: 0.7;
   color: #FDFFF6; }
   @media only screen and (min-width: 321px) and (max-width: 720px) {
     .header {
@@ -377,19 +379,23 @@ th {
   text-transform: uppercase;
   font-family: "Open Sans Condensed", sans-serif;
   font-size: 45px;
-  margin-left: 20px; }
-  @media only screen and (max-width: 400px) {
+  margin-left: 20px;
+  opacity: 0.7; }
+  @media only screen and (min-width: 321px) and (max-width: 720px) {
     .name {
       margin-top: 10px;
       text-align: center;
-      float: none; } }
+      float: none;
+      margin: 0 auto;
+      opacity: 0.7; } }
 
 .nav-bar {
   float: right;
   text-transform: lowercase;
   font-family: "Open Sans Condensed", sans-serif;
   font-size: x-large;
-  margin-right: 20px; }
+  margin-right: 20px;
+  opacity: 0.7; }
 
 .clearfix {
   clear: both; }
@@ -397,17 +403,17 @@ th {
 li, a {
   text-decoration: none;
   color: #FDFFF6; }
-  @media only screen and (max-width: 400px) {
+  @media only screen and (min-width: 321px) and (max-width: 720px) {
     li, a {
       text-align: center;
       float: none; } }
-  @media only screen and (max-width: 720px) {
+  @media only screen and (max-width: 721px) {
     li, a {
       padding-bottom: 20px;
       display: inline-block;
       padding: 6px;
       text-align: center; } }
-  @media only screen and (min-width: 719px) {
+  @media only screen and (min-width: 720px) {
     li, a {
       font-size: x-large;
       display: inline-block;
@@ -415,6 +421,6 @@ li, a {
       padding-top: -20px; } }
 
 a:hover {
-  color: #FFBDDB; }
+  color: #FF42B8; }
 
 /*# sourceMappingURL=style.css.map */
