--- a/themes/my_theme/style.css
+++ b/themes/my_theme/style.css
@@ -361,8 +361,8 @@ th {
   height: 100%; }
 
 .content {
-  text-align: center;
-  width: 100%; }
+  width: 100px;
+  margin: 40px auto; }
 
 .header {
   position: absolute;
@@ -379,23 +379,20 @@ th {
   text-transform: uppercase;
   font-family: "Open Sans Condensed", sans-serif;
   font-size: 45px;
-  margin-left: 20px;
-  opacity: 0.7; }
+  margin-left: 20px; }
   @media only screen and (min-width: 321px) and (max-width: 720px) {
     .name {
       margin-top: 10px;
       text-align: center;
       float: none;
-      margin: 0 auto;
-      opacity: 0.7; } }
+      margin: 0 auto; } }
 
 .nav-bar {
   float: right;
   text-transform: lowercase;
   font-family: "Open Sans Condensed", sans-serif;
   font-size: x-large;
-  margin-right: 20px;
-  opacity: 0.7; }
+  margin-right: 20px; }
 
 .clearfix {
   clear: both; }
@@ -409,7 +406,6 @@ li, a {
       float: none; } }
   @media only screen and (max-width: 721px) {
     li, a {
-      padding-bottom: 20px;
       display: inline-block;
       padding: 6px;
       text-align: center; } }
@@ -417,10 +413,22 @@ li, a {
     li, a {
       font-size: x-large;
       display: inline-block;
-      padding-right: 15px;
-      padding-top: -20px; } }
+      padding-right: 15px; } }
 
 a:hover {
   color: #FF42B8; }
+
+.footer {
+  background-color: #495055;
+  width: 100%;
+  height: 70px;
+  color: #FDFFF6;
+  font-family: "Rajdhani", sans-serif;
+  float: right; }
+
+footer img {
+  border-radius: 100%;
+  width: 80px;
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
