--- a/themes/my_theme/style.css
+++ b/themes/my_theme/style.css
@@ -361,8 +361,12 @@ th {
   height: 100%; }
 
 .content {
-  width: 100px;
-  margin: 40px auto; }
+  margin: 10px auto; }
+
+.content p {
+  width: 60%;
+  font-size: large;
+  color: #FF42B8; }
 
 .header {
   position: absolute;
@@ -387,7 +391,7 @@ th {
       float: none;
       margin: 0 auto; } }
 
-.nav-bar {
+nav {
   float: right;
   text-transform: lowercase;
   font-family: "Open Sans Condensed", sans-serif;
@@ -399,11 +403,10 @@ th {
 
 li, a {
   text-decoration: none;
-  color: #FDFFF6; }
+  color: #FF42B8; }
   @media only screen and (min-width: 321px) and (max-width: 720px) {
     li, a {
-      text-align: center;
-      float: none; } }
+      text-align: center; } }
   @media only screen and (max-width: 721px) {
     li, a {
       display: inline-block;
@@ -422,7 +425,6 @@ a:hover {
   background-color: #495055;
   width: 100%;
   height: 70px;
-  color: #FDFFF6;
   font-family: "Rajdhani", sans-serif;
   float: right; }
 
