--- a/themes/my_theme/sass/style.scss
+++ b/themes/my_theme/sass/style.scss
@@ -10,17 +10,24 @@ $pink: #FF42B8;
 .container {
   width: 100%;
   height: 100%;
-//  background-color: $light_grey;
+  background-color: $light_grey;
 }
 
-.content {
-  margin: 10px auto;
+.content img{
+  
+}
+
+dd {
+  color: $dark_grey;
+  font-family: $font;
+  text-align: center;
 }
 
 .content p {
   width: 60%;
   font-size: large;
   color: $pink;
+  text-align: center;
 }
 
 .header {
@@ -41,15 +48,15 @@ $pink: #FF42B8;
   font-size: 45px;
   margin-left: 20px;
   @media only screen and (min-width: 321px) and (max-width: 720px) {
+    font-size: xx-large;
     margin-top:10px;
     text-align: center;
     float: none;
     margin: 0 auto;
   }
-}
-
-.pagenav {
-  
+  @media only screen and (max-width: 320px) {
+    font-size: x-large;
+  }
 }
 
 nav {
