--- a/themes/my_theme/style.css
+++ b/themes/my_theme/style.css
@@ -358,15 +358,19 @@ th {
 
 .container {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  background-color: #C2CEC9; }
 
-.content {
-  margin: 10px auto; }
+dd {
+  color: #495055;
+  font-family: "Rajdhani", sans-serif;
+  text-align: center; }
 
 .content p {
   width: 60%;
   font-size: large;
-  color: #FF42B8; }
+  color: #FF42B8;
+  text-align: center; }
 
 .header {
   position: absolute;
@@ -386,10 +390,14 @@ th {
   margin-left: 20px; }
   @media only screen and (min-width: 321px) and (max-width: 720px) {
     .name {
+      font-size: xx-large;
       margin-top: 10px;
       text-align: center;
       float: none;
       margin: 0 auto; } }
+  @media only screen and (max-width: 320px) {
+    .name {
+      font-size: x-large; } }
 
 nav {
   float: right;
