--- a/themes/my_theme/style.css
+++ b/themes/my_theme/style.css
@@ -358,25 +358,47 @@ th {
 
 .container {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  background-color: #C2CEC9; }
 
 .content {
-  margin: 10px auto; }
+  padding-top: 120px;
+  margin: 0 auto;
+  text-align: center; }
 
-.content p {
-  width: 60%;
+.content a img {
+  opacity: .4; }
+
+h2 {
+  padding-top: 120px;
+  color: #FF42B8;
+  font-size: xx-large; }
+
+p {
+  width: 50%;
   font-size: large;
-  color: #FF42B8; }
+  color: #FDFFF6;
+  margin: 0 auto;
+  padding: 10px; }
 
 .header {
   position: absolute;
   background-color: #495055;
   width: 100%;
+  opacity: .7;
   height: 70px;
   color: #FDFFF6; }
   @media only screen and (min-width: 321px) and (max-width: 720px) {
     .header {
       height: 120px; } }
+
+.gallery-item {
+  margin-top: 120px; }
+
+select {
+  font-family: "Open Sans Condensed", sans-serif;
+  color: #FDFFF6;
+  font-size: x-large; }
 
 .name {
   float: left;
