THE COMMIT. nav-bar works to parent pages with links to children pages

--- a/themes/my_theme/sass/style.scss
+++ b/themes/my_theme/sass/style.scss
@@ -14,7 +14,7 @@ $pink: #FF42B8;
 }
 
 .content img{
-  
+  padding-top: 20px;
 }
 
 .gallery-item {
@@ -28,6 +28,8 @@ dd {
 }
 
 .content p {
+  margin: 0 auto;
+  padding-top: 120px;
   width: 60%;
   font-size: large;
   color: $pink;
