--- a/themes/my_theme/sass/style.scss
+++ b/themes/my_theme/sass/style.scss
@@ -7,6 +7,10 @@ $light_grey: #C2CEC9;
 $dark_grey: #495055;
 $pink: #FF42B8;
 
+body {
+  margin: 0 auto;
+}
+
 .container {
   width: 100%;
   height: 100%;
@@ -26,14 +30,6 @@ dd {
   font-family: $font;
   text-align: center;
 }
-
-.content p {
-  margin: 0 auto;
-  padding-top: 120px;
-  width: 60%;
-  font-size: large;
-  color: $pink;
-  text-align: center;
 
 .content {
   padding-top: 120px;
@@ -64,11 +60,23 @@ p {
   padding: 10px;
 }
 
+.menu {
+  font-size: xx-large;
+  font-family: $fancy_font;
+  color: $pink;
+  float: right;
+}
+
+.menu img {
+  float: left;
+  border-radius: 100%;
+}
+
 .header {
   position: absolute;
   background-color: $dark-grey;
   width: 100%;
-  //opacity: .7;
+  opacity: .7;
   height: 70px;
   color: $whitish;
   @media only screen and (min-width: 321px) and (max-width: 720px) {
@@ -115,11 +123,6 @@ nav {
   margin-right: 20px;
 }
 
-.page-dropdown {
-  text-transform: lowercase;
-  font-family: $fancy_font;
-  font-size: x-large;
-}
 
 .clearfix {
   clear: both;
