--- a/themes/my_theme/style.css
+++ b/themes/my_theme/style.css
@@ -356,23 +356,30 @@ td,
 th {
   padding: 0; }
 
+body {
+  margin: 0 auto; }
+
 .container {
   width: 100%;
   height: 100%;
   background-color: #C2CEC9; }
 
-<<<<<<< HEAD
+.content img {
+  padding-top: 20px; }
+
+.gallery-item {
+  padding-top: 20px; }
+
 dd {
   color: #495055;
   font-family: "Rajdhani", sans-serif;
   text-align: center; }
-=======
+
 .content {
   padding-top: 120px;
   margin: 0 auto;
   text-align: center;
   width: 80%; }
->>>>>>> master
 
 dd {
   padding-bottom: 20px; }
@@ -385,19 +392,25 @@ h2 {
 p {
   width: 100%;
   font-size: large;
-<<<<<<< HEAD
-  color: #FF42B8;
-  text-align: center; }
-=======
   color: #F9FFF9;
   margin: 0 auto;
   padding: 10px; }
->>>>>>> master
+
+.menu {
+  font-size: xx-large;
+  font-family: "Open Sans Condensed", sans-serif;
+  color: #FF42B8;
+  float: right; }
+
+.menu img {
+  float: left;
+  border-radius: 100%; }
 
 .header {
   position: absolute;
   background-color: #495055;
   width: 100%;
+  opacity: .7;
   height: 70px;
   color: #F9FFF9; }
   @media only screen and (min-width: 321px) and (max-width: 720px) {
@@ -438,11 +451,6 @@ nav {
   font-family: "Open Sans Condensed", sans-serif;
   font-size: x-large;
   margin-right: 20px; }
-
-.page-dropdown {
-  text-transform: lowercase;
-  font-family: "Open Sans Condensed", sans-serif;
-  font-size: x-large; }
 
 .clearfix {
   clear: both; }
